Fixed color bugs with light/dark mode

--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap");
 
 :root {
-  --dark-blue: hsl(209, 23%, 22%);
-  --very-dark-blue: hsl(207, 26%, 17%);
+  --dark-blue: #2b3743;
+  --very-dark-blue: #202d36;
   --dark-grey: hsl(0, 0%, 52%);
   --very-light-grey: #fafafa;
   --white: #ffffff;
-
-  --box-shadow: 0px 0px 10px 4px #d3d3d3;
+  --black: hsl(200, 15%, 8%);
 
   --light: 300;
   --bold: 600;
@@ -25,6 +24,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   background-color: var(--very-light-grey);
+  color: var(--black);
 }
 
 button {
